--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 body {
+   background-image: url("https://thumbs.dreamstime.com/b/fondo-floral-primaveral-con-ramas-de-flores-primaverales-florecientes-sobre-rosa-rosado-espacio-vac%C3%ADo-para-texto-tiempo-primavera-363398326.jpg");/
+   background-size: cover;
+  background-repeat: no-repeat;
+  
+  
+  
   background-color: aliceblue;
   text-align: center;
   background-size: cover;
@@ -15,12 +21,15 @@ html{
 
 #myCanvas {
   border: 1px solid black;
+  background-image:url("https://static.vecteezy.com/system/resources/previews/042/719/892/non_2x/spring-glade-in-forest-with-flowering-pink-flowers-in-sunny-day-tranquil-natural-spring-landscape-with-flowers-blurred-forest-field-background-soft-focus-photo.jpg");/
+    background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container{
   display: flex;
   flex-wrap: wrap;
-  background-color: white;
+  background-color: green;
   justify-content: space-around;
   align-items: flex-start;
   padding-bottom: 20px;
